tests/lit/all/assembler/mod/bad_quoted.ya
// RUN: @yair_as @file --color never

// CHECK: error: Expected closing quote
mod "🎄 {}
